test/analysis/reject/undeclared-start.ptk
# expected: E1303, W4000
start <undeclared>;